# mesa-blocks

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: wolf_sheep.json
src/mesa_blocks/: __init__.py  cli.py  code_generator.py  config_parser.py  model_runner.py  server.py
src/mesa_blocks/static/css/: style.css
src/mesa_blocks/static/js/: app.js  blocks.js  connections.js  preview.js  properties.js
src/mesa_blocks/templates/: index.html
